[package]
name = "SpaceCraftIMT" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Ruben SAILLY <ruben.sailly@gmail.com>"]
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
rp2040-hal = "0.10.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.4"
rp2040-boot2 = "0.3.0"

[[bin]]
name = "main"
path = "src/main.rs"